# insurance-mlops

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/raw/: test.csv.dvc  train.csv.dvc
docs/: DATA_DICTIONARY.md  MODEL_CARD.md
feature_repo/: data_sources.py  feature_store.yaml  features.py
notebooks/: 01_eda.ipynb  02_preproceso.ipynb  02_preprocess_demo.ipynb  03_feast_inicio.ipynb  04_CV.ipynb  05_Optuna.ipynb  06_Comparativa_modelos.ipynb  07_Analisis_de_errores.ipynb  08_Interpretabilidad.ipynb  09_Fairness.ipynb
scripts/: build_training_set.py  predict_test.py  register_model.py
src/: clean.py  config.py  data.py  eda_utils.py  features.py  logging_utils.py  mlflow_setup.py  models.py  splits.py  train.py  tune.py
