[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Proyecto para predecir primas de seguros"
authors = [
  { name = "fertueros" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "dvc>=3.61.0",
    "feast>=0.51.0",
    "jupyterlab>=4.4.5",
    "lightgbm>=4.6.0",
    "loguru",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
    "xgboost>=3.0.2",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

