[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "1.0.0"
description = "Proyecto para predecir primas de seguros"
authors = [
  { name = "fertueros" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "dagshub",
    "dice-ml",
    "dvc",
    "evidently",
    "fairlearn",
    "feast",
    "ipywidgets",
    "jupyterlab",
    "jupyterlab-widgets",
    "lightgbm",
    "lime",
    "loguru",
    "matplotlib",
    "missingno",
    "mlflow",
    "numpy",
    "optuna",
    "optuna-integration[mlflow]",
    "pandas",
    "pip",
    "plotly",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn",
    "shap",
    "streamlit",
    "tqdm",
    "typer",
    "umap-learn",
    "xgboost",
]

requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

